# GraphAI

./: .gitignore  LICENSE  README.md  demo_enhanced_explorer.py  demo_results_20250530_105229.md  enhanced_graph_explorer_demo.py  graph_explorer_validation_20250529_234048.json  pyproject.toml  test_comprehensive_fix.py  test_enhanced_features.py  test_search.py  test_search_enhanced.py  test_unhashable_fix.py  validate_graph_explorer.py
config/: requirements.txt
data/: combined_manybirds_dataset.json  enhanced_manybirds_test_data.json  expanded_manybirds_products.json
demos/: compelling_use_case_demo_fixed.py  demo_graphiti_cosmos.py  ecommerce_intelligence_demo_fixed.py  graph_explorer.py  interactive_demo.py  new_viz.py  step_by_step_visualization_demo.py  text_based_viz.py  visualization_demo.py
docs/: CLEANUP_SUMMARY.md  COMPELLING_USE_CASE.md  ECOMMERCE_USE_CASE.md  ENHANCEMENT_COMPLETION_REPORT.md  GRAPH_EXPLORER_JOURNEY.md  GRAPH_EXPLORER_VALIDATION_REPORT.md  README.md  TEST_DATA_README.md  UV_MIGRATION_SUMMARY.md
ecommerce_intelligence_reports/: business_summary_20250526_144501.txt  business_summary_20250530_113158.txt  customer_insights_20250526_144501.txt  customer_insights_20250530_113158.txt  market_trends_20250526_144501.txt  market_trends_20250530_113158.txt  product_insights_20250526_144501.txt  product_insights_20250530_113158.txt
exploration_sessions/: session_20250530_090235.json  session_20250530_095107.json  session_20250530_112551.json
intelligence_reports/: customer_intelligence_20250526_150805.txt  graph_statistics_20250526_150805.txt  market_intelligence_20250526_150805.txt  supply_chain_intelligence_20250526_150805.txt
real_time_visualizations/: enhanced_graph_visualization.html  graph_visualization.html  timeline.json
scripts/: combine_datasets.py  generate_enhanced_test_data.py  get_cosmos_keys.ps1  load_manybirds_to_cosmos.py  load_test_data.py  production_test.py  setup_environment.ps1
src/: graphiti_cosmos.py
visualizations/: ecommerce_visualization.md
